# Simple-code-parser

./: Cargo.toml  README.md  build.rs  requirments.txt
.github/workflows/: running_tests.yml
src/: ast.rs  grammar.lalrpop  main.rs  parse.rs
src/modules/: ast.rs  dot_tree.rs  graphviz.rs  mod.rs
tests/: test_grammar_parser_stmt1_dot_tree.txt  test_grammar_parser_stmt2_dot_tree.txt  test_grammar_parser_stmt3_dot_tree.txt  test_grammar_parser_stmt3_dot_tree_input.txt  test_grammar_parser_stmt4_dot_tree.txt  test_grammar_parser_stmt4_dot_tree_input.txt
