[package]
name = "lalrpop-expression"
version = "0.1.0"
authors = ["Konstantin Grech <kgrech@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0.22.1", features = ["lexer"] }

[dependencies]
lalrpop-util = "0.22.1"
regex = "1"
logos = "0.12.0"
clap = { version = "4.5.27", features = ["derive"] }
pyo3 = "0.23.4"


[dev-dependencies]
rstest = "0.24.0"
